<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@drawable/obrok256"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zahtevano_polje"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_datum"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:enabled="false"
            android:hint="@string/datum"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:prompt="@string/tip"
        android:entries="@array/spinner_items"
        android:id="@+id/spinner"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_sladkor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Показник цукру в крові"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="351dp"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/notifi"
                android:layout_alignRight="@+id/notifi"
                android:layout_below="@+id/notifi"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/notifi"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="Додати страву" />

            <Button
                android:id="@+id/button3"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linear"
                android:text="Порахувати кількість ХО" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_kolicina_oh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kolicina_oh_req"
                android:inputType="numberDecimal"></android.support.design.widget.TextInputEditText>

            <TextView
                android:id="@+id/oh_counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>


    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        style="?android:buttonBarStyle">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_enot_inzulina"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:hint="@string/enot_inzulina"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_calculate"
            style="?android:actionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/izračunaj_potreben_inzulin"
            android:visibility="invisible" />
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_opis"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/opis"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarPositiveButtonStyle"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarNegativeButtonStyle"
            android:layout_gravity="center"
            android:text="@string/ok"
            android:id="@+id/btn_save" />
    </LinearLayout>
</LinearLayout>