<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@drawable/vnos256"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zahtevano_polje"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_datum"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:enabled="false"
            android:hint="@string/datum"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_sladkor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Показник цукру в крові"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_kolicina_oh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Кількість ХО"
            android:inputType="numberDecimal"
            android:visibility="invisible" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        style="?android:buttonBarStyle">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_enot_inzulina"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/enot_inzulina"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_calculate"
            style="?android:actionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/izračunaj_potreben_inzulin"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarPositiveButtonStyle"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarNegativeButtonStyle"
            android:layout_gravity="center"
            android:text="@string/ok"
            android:id="@+id/btn_save" />
    </LinearLayout>


</LinearLayout>