<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:nestedScrollingEnabled="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ales.diabetolog.ActivityStatistics">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/tv_obdobje"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:orientation="vertical"
                android:id="@+id/ll_vsi">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistika_vse"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_min_vsi"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/min_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_max_vsi"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/max_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_avg_vsi"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/avg_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:orientation="vertical"
                android:id="@+id/ll_vnosi">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistika_vnosi"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_min_vnosi"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/min_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_max_vnosi"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/max_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_avg_vnosi"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/avg_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:orientation="vertical"
                android:id="@+id/ll_obroki">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistika_obroki"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_min_obroki"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/min_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_max_obroki"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/max_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_avg_obroki"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/avg_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:orientation="vertical"
                android:id="@+id/ll_aktivnosti">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistika_aktivnosti"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_min_aktivnosti"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/min_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_max_aktivnosti"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/max_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_avg_aktivnosti"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:hint="@string/avg_vred"
                            android:layout_weight="1"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/pie_chart"/>
        <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:id="@+id/line_chart"/>
        <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:id="@+id/line_chart_all"/>
    </LinearLayout>
</ScrollView>

